# LocationSystem

./: LICENSE  README.md
backup/camera/: CMakeLists.txt
backup/camera/include/: capture.h
backup/camera/src/: backup.cpp  capture.cpp
backup/locationsystem/: CMakeLists.txt  locationsystem.launch  package.xml
backup/locationsystem/include/filesystem/: filesystem.h
backup/locationsystem/include/locationsystem/: Matrix.h  SURF.h  improc.h
backup/locationsystem/src/: main.cpp
backup/locationsystem/src/filesystem/: filesystem.cpp
backup/locationsystem/src/improc/: improc.cpp
backup/locationsystem/src/picam/: RaspiCLI.c  RaspiCamControl.c  RaspiPreview.c
backup/locationsystem/src/surf/: Matrix.cpp  SURF.cpp
backup/matching_test/: CMakeLists.txt  package.xml  test.launch
backup/matching_test/include/: filesystem.h  global.h  improc.h  main.h  matching.h  surf.h  viewer.h
backup/matching_test/src/: filesystem.cpp  improc.cpp  main.cpp  matching.cpp  surf.cpp  viewer.cpp
backup/surf_test/: CMakeLists.txt  package.xml  surf_test.launch
backup/surf_test/include/: main.h
backup/surf_test/include/matching/: matching.h
backup/surf_test/picture/: image_surf.txt
backup/surf_test/src/: main.cpp
backup/surf_test/src/filesystem/: filesystem.cpp
backup/surf_test/src/improc/: improc.cpp
backup/surf_test/src/matching/: matching.cpp
backup/surf_test/src/surf/: surf.cpp
backup/surf_test/src/viewer/: viewer.cpp
backup/viewer/: CMakeLists.txt  package.xml
backup/viewer/include/viewer/: viewer.h
backup/viewer/src/: viewer.cpp
camera/: CMakeLists.txt  camera.launch  package.xml
camera/include/: main.h
camera/src/: main.cpp
locationsystem/: CMakeLists.txt  locationsystem.launch  package.xml
locationsystem/include/locationsystem/: locationsystem.h
locationsystem/src/: locationsystem.cpp
picamcv/: CMakeLists.txt  package.xml
picamcv/include/picamcv/: camcv.h
picamcv/src/: RaspiCLI.c  RaspiCamControl.c  RaspiPreview.c  camcv.cpp
