<?xml version="1.0"?>
<package>
	<name>surf_test</name>
	<version>1.0.0</version>
	<description>The surf_test package</description>

	<maintainer email="wwwjyc@gmail.com">pi</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>

	<run_depend>message_runtime</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>sensor_msgs</run_depend>
</package>
